--- a/styles/main.css
+++ b/styles/main.css
@@ -1,137 +1,22 @@
-.block_chatbot_tany{
-    border: none !important;
-    background-color: transparent !important;
-}
-.btn-repo{
-    border-radius: 4px;
+.button-ecoVoice {
+    width: 3.2em;
+    height: 3.2em;
+    border-radius: 50px;
     border: none;
-    padding: 0.6rem 1.5rem;
-    color: #fff;
-    background: #128F46;
-    font-family: 'Montserrat';
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-.btn-repo:hover{
-    text-decoration: none;
-    background: #12974a;
-    color: #fff;
-}
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-}
-#chat-container-wrapper {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 0;
-    height: 100%;
-    overflow: hidden;
-    transition: width 0.3s ease;
-    z-index: 999999;
+    cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
 
-#chat-container {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    padding: 0px !important;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-#chat-header {
     display: flex;
     align-items: center;
-    padding: 10px;
-    background: linear-gradient(95deg, #A1D65E 2.98%, #6E963C 100%); /* Color de fondo del header */
-    color: #fff;
-    justify-content: space-between;
-}
-
-#chat-header img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 10px;
-    cursor:pointer;
-}
-
-#chat-header span {
-    font-weight: bold;
-}
-
-#chatbox {
-    height: calc(100% - 130px);
-    overflow-y: scroll;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.message {
-    max-width: 70%;
-    padding: 10px;
-    margin-bottom: 10px;
-    word-wrap: break-word;
-}
-.message img{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.received {
-    background-color: #e5e5ea;
-    border-radius: 10px 10px 10px 0;
-}
-
-.sent {
-    background-color: #dcf8c6;
-    border-radius: 10px 10px 0 10px;
-    align-self: flex-end;
-}
-
-#user-input-container {
-    display: flex;
-    padding: 10px;
-    border-top: 1px solid #ccc;
-}
-
-#user-input {
-    flex: 1;
-    padding: 8px;
-    border-radius: 5px 0 0 5px;
-    border: none;
-}
-
-button {
-    padding: 8px 15px;
-    border: 1px solid #ccc;
-    border-radius: 0 5px 5px 0;
-     color: #fff;
-    cursor: pointer;
-    background: transparent;
-   
-    border: none;
-}
-
-#chat-icon {
+    justify-content: center;
+    
     position: fixed;
-    bottom: 80px;
-    right: 28px;
-    cursor: pointer;
-    z-index: 999999;
+    right: 2em;
+    bottom: 9.5em;
 }
 
-#chat-icon img {
-    width: 50px; /* Ajusta el tamaño según tus necesidades */
-    height: 50px;
-    border-radius: 40%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+.button-ecoVoice img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
