--- a/styles/main.css
+++ b/styles/main.css
@@ -20,3 +20,21 @@
     height: 100%;
     object-fit: contain;
 }
+
+/* CSS ventana modal */
+.container_modal {
+    width: 100%;
+    height: 15em;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container_modal button {
+    width: 8em;
+    height: 3em;
+    background-color: red;
+    border: none;
+    border-radius: 10px;
+}
