--- a/styles/main.css
+++ b/styles/main.css
@@ -24,11 +24,11 @@
 /* CSS ventana modal */
 .container_modal {
     width: 100%;
-    height: 15em;
-
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: 2em;
 }
 
 .container_modal button {
@@ -37,4 +37,39 @@
     background-color: red;
     border: none;
     border-radius: 10px;
+}
+
+.container-instructions {
+    width: 100%;
+    background-color: #D9D9D9;
+    padding: 1em;
+    box-sizing: border-box;
+    border-radius: 10px;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 0.2em;
+}
+
+.container-instructions h1 {
+    font-size: 1.2em;
+}
+
+.container-instructions p {
+    margin: 0;
+}
+
+.container-text-audio {
+    width: 100%;
+    height: 5em;
+    padding: 1em;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #D9D9D9;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
